testing/testing-ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: testing
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    # sitemaps
    - match: Host(`testing.pocketcoach.fit`)
      kind: Rule
      services:
        - name: admin-panel-2-migration
          port: 80
